# obs-reminder

./: .gitignore  Cargo.toml  README-CN.md  README-TW.md  README.md  Taskfile.yml  build.rs  config.toml  screenshot.md  screenshots.md  test_audio_feature.md
.github/workflows/: build.yml
browser/: .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
browser/src/: app.css
browser/src/routes/: +page.svelte
client/: Cargo.toml  config.toml
client/src/: app.rs  config.rs  fonts.rs  main.rs  timer.rs  websocket.rs
scripts/: build.bat  build.sh
src/: app.rs  audio_manager.rs  config.rs  fonts.rs  http_server.rs  main.rs  timer.rs  websocket.rs
