[package]
name = "obs-reminder-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# gui framework
egui = "0.32.0"
eframe = "0.32.0"
catppuccin-egui = { version = "5.6.0", default-features = false, features = ["egui32"] }

# logging framework
env_logger = "0.11.8"
log = "0.4.27"

# async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"

# serialization framework
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# http server
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# others
futures-util = "0.3"
rand = "0.8"
rust-embed = "8.7.2"
mime_guess = "2.0"
bytes = "1.0"
urlencoding = "2.1"
rfd = "0.15"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
winresource = "0.1.23"
