[package]
name = "obs-reminder-client"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.0"
eframe = "0.32.0"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
futures-util = "0.3"
rand = "0.8"
